Wed Aug 04 12:25:12 1999  Gonzalo A. Diethelm  <Gonzalo.Diethelm@jda.cl>

	* source/rdd/dbcmd.c: 
	Got rid of the bell (0x07) character printed in error messages; it
	tends to screw up in some consoles.
	Changed hb_rddRegister() to return an int rather than a bool, so
	now it is possible to return different status values.
	Now trying to register the same RDD more than once is a NOOP.
	
	* source/rdd/dbfntx/dbfntx0.prg: 
	KLUDGE ALARM: since the DBFNTX driver depends on the DBF driver,
	and the order of INIT procedures is not guaranteed (and is
	actually the wrong order under gcc/Win32), I forced the
	initialization of DBF before DBFNTX.

19990804-17:30 GMT+1 Victor Szel <info@szelvesz.hu>
  * source/rtl/msgxxx.c
    - __TURBOC__ branch deleted.
  * source/rtl/alert.prg
    + Added the handling of first parameters of Alert() if they are not strings.
  * source/rtl/copyfile.c
    + Changed to use: hb_errorRT_BASE_Ext1()
      So now it can retry or default.
  * source/rtl/errorapi.c
    include/rtl/errorapi.h
    + Added: hb_errorRT_BASE_Ext1()
    + Added: hb_errorRT_New() (static)
    ! Fixed: hb_errorLaunch() so that it converts the logical
      value returned by the codeblock to a number.
    + Added: hb_errorLaunch() some notes about internal error which can occur
      here.
  * source/rtl/errorsys.prg
    + Added: Alert() box.
  * source/rtl/msgxxx.c (code moved away from here)
    source/rtl/classes.c
    source/rtl/errorapi.c
    source/vm/hvm.v
    + Uses Language API instead of hb_errorNat...() function.
  * source/vm/hvm.c
    ! LONG lLineNo -> WORD wLineNo to suppress a warning.
  * include/langapi.h
    source/rtl/langapi.c
    + Language API initial implementation.
  * source/rtl/vm/ForTest()
    - Removed the "internal error" which stated that there will
      be infinite loop if STEP 0 is used, Clipper just goes into an 
      ininite loop.
    ! Changed printf() to a standard error is STEP expression is not numeric.
  * include/errorapi.h